[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/moving_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sfx/ui_select.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sfx/ui_hover.wav" type="AudioStream" id=3]
[ext_resource path="res://Themes/options_theme.tres" type="Theme" id=4]
[ext_resource path="res://Themes/title_theme.tres" type="Theme" id=5]
[ext_resource path="res://Assets/Font/ModernDOS9x16.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/help_menu_stuff_container.gd" type="Script" id=8]
[ext_resource path="res://Scenes/vhs_shader.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="menu" type="Node2D"]

[node name="moving_background" parent="." instance=ExtResource( 1 )]

[node name="menu_items" type="Control" parent="."]
margin_right = 54.0
margin_bottom = 54.0

[node name="title" type="Label" parent="menu_items"]
margin_top = 28.0
margin_right = 1028.0
margin_bottom = 198.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.92549, 1, 0, 1 )
text = "Help"
align = 1
valign = 1

[node name="title_underline" type="Label" parent="menu_items/title"]
margin_left = 1.0
margin_top = 67.0
margin_right = 1031.0
margin_bottom = 237.0
theme = ExtResource( 5 )
text = ".............."
align = 1
valign = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="menu_items"]
margin_left = 316.0
margin_top = 247.0
margin_right = 709.0
margin_bottom = 472.0
theme = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[ Controls: ]
Up, Down,
Left, Right, Space
---------------
[ How to play ]
Don't get hit."
text = "[ Controls: ]
Up, Down,
Left, Right, Space
---------------
[ How to play ]
Don't get hit."

[node name="menu_stuff" type="CenterContainer" parent="menu_items"]
margin_left = 385.0
margin_top = 259.0
margin_right = 640.0
margin_bottom = 567.0

[node name="help_menu_stuff_container" type="GridContainer" parent="menu_items/menu_stuff"]
margin_right = 255.0
margin_bottom = 308.0
rect_min_size = Vector2( 255, 308 )
script = ExtResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="menu_items/menu_stuff/help_menu_stuff_container"]
margin_right = 164.0
margin_bottom = 225.0
theme = ExtResource( 4 )
text = "

"
fit_content_height = true

[node name="back" type="LinkButton" parent="menu_items/menu_stuff/help_menu_stuff_container"]
margin_top = 229.0
margin_right = 164.0
margin_bottom = 303.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.788235, 0.94902, 0.552941, 1 )
enabled_focus_mode = 0
text = "Back"
underline = 2

[node name="vhs_shader" parent="." instance=ExtResource( 9 )]

[node name="ui_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
mix_target = 2

[node name="ui_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
mix_target = 2

[connection signal="mouse_entered" from="menu_items/menu_stuff/help_menu_stuff_container/back" to="menu_items/menu_stuff/help_menu_stuff_container" method="_on_back_mouse_entered"]
[connection signal="pressed" from="menu_items/menu_stuff/help_menu_stuff_container/back" to="menu_items/menu_stuff/help_menu_stuff_container" method="_on_back_pressed"]
